external-crates/move/crates/move-compiler/tests/move_check/parser/spec_parsing_ok.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
   ┌─ tests/move_check/parser/spec_parsing_ok.move:11:5
   │
11 │     spec module {
   │     ^^^^
   │     │
   │     Unexpected 'spec'
   │     Expected a module member: 'use', 'friend', 'const', 'fun', or 'struct'

error[E01002]: unexpected token
   ┌─ tests/move_check/parser/spec_parsing_ok.move:11:17
   │
11 │     spec module {
   │                 ^
   │                 │
   │                 Unexpected '{'
   │                 Expected an address or an identifier

error[E01002]: unexpected token
   ┌─ tests/move_check/parser/spec_parsing_ok.move:93:17
   │
93 │     spec module {
   │                 ^
   │                 │
   │                 Unexpected '{'
   │                 Expected an address or an identifier

error[E01002]: unexpected token
    ┌─ tests/move_check/parser/spec_parsing_ok.move:118:17
    │
118 │     spec module {
    │                 ^
    │                 │
    │                 Unexpected '{'
    │                 Expected an address or an identifier

error[E01002]: unexpected token
    ┌─ tests/move_check/parser/spec_parsing_ok.move:124:17
    │
124 │     spec module {
    │                 ^
    │                 │
    │                 Unexpected '{'
    │                 Expected an address or an identifier

error[E01002]: unexpected token
    ┌─ tests/move_check/parser/spec_parsing_ok.move:132:17
    │
132 │     spec module {
    │                 ^
    │                 │
    │                 Unexpected '{'
    │                 Expected an address or an identifier
